# autokick

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: build.yml  check.yml
src/: main.rs
