[package]
name = "autokick"
version = "0.1.0"
edition = "2021"


[dependencies]
twilight-cache-inmemory = { version = "0.16.0", features = ["permission-calculator"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-gateway = "0.17.0"
twilight-model = "0.16.0"
twilight-http = "0.16.0"
valk-utils = "0.1"
tracing = "0.1"
vss = "0.1"
