[package]
name = "autokick"
version = "0.1.0"
edition = "2021"


[dependencies]
twilight-cache-inmemory = { version = "0.17", features = ["permission-calculator"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
twilight-gateway = "0.17"
twilight-model = "0.17"
twilight-http = "0.17"
valk-utils = "0.1"
tracing = "0.1"
vss = "0.1"
